# pastebin

./: Cargo.toml  README.md  Rocket.toml  make.sh
.cargo/: config
src/: main.rs
