[package]
name = "pastebin"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
rocket = "0.4.5"
rand = "0.7"

#typed html template
[dependencies.maud]
version = "*"
features = ["rocket"]

#staic file serving
[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve"]
